# fastapi_SF

./: main.py  pyproject.toml
alembic/: env.py
api/: snippets.py  user.py
core/: config.py  logger.py
db/: db.py
models/: __init__.py  role.py  snippet.py  user.py
schemas/: snippet.py  user.py
services/: snippet.py  user.py
